Fix overlapping issue

--- a/ftoast-style.css
+++ b/ftoast-style.css
@@ -1,1 +1,82 @@
-:root { --toastColor: green; --toastDur: 10s; } .toast { background-color: #fff; width: 300px; height: auto; border: 1px solid var(--toastColor); border-bottom: none; border-left-width: 5px; display: flex; align-items: center; justify-content: center; border-radius: 10px; box-shadow: 5px 0px 5px var(--toastColor); position: fixed; top: 10px; right: 10px; transform: translateX(calc(100% + 12px)); transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1); z-index: 555; } .toast.active { transform: translateX(0%); } .toast .toast-content { padding: 5px 10px; width: 100%; display: flex; align-items: center; justify-content: center; } .toast-symbol { display: flex; width: 30px; height: 30px; justify-content: center; align-items: center; padding: 10px; background-color: var(--toastColor); color: #fff; border-radius: 50%; } .toast-message { flex: 1; display: flex; align-items: center; justify-content: center; flex-direction: column; margin: 10px; } .toast-message .status { font-weight: bolder; font-size: 22px; color: var(--toastColor) } .toast-message .message { font-size: 20px; } .toast-close { position: absolute; font-size: 18px; top: 5px; right: 5px; } .toast-progresbar { width: 100%; height: 5px; background-color: var(--toastColor); position: absolute; bottom: 0; left: 0; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px; transition-property: width; transition-duration: var(--toastDur); transition-timing-function: linear; } .toast-progresbar.active { width: 0; }
+:root {
+  --toastColor: green;
+  --toastDur: 10s;
+}
+.toast {
+  background-color: #fff;
+  width: 300px;
+  height: auto;
+  border: 1px solid var(--toastColor);
+  border-bottom: none;
+  border-left-width: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  box-shadow: 5px 0px 5px var(--toastColor);
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  transform: translateX(calc(100% + 12px));
+  transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
+  z-index: 55555 !important;
+}
+.toast.active {
+  transform: translateX(0%);
+}
+.toast .toast-content {
+  padding: 5px 10px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.toast-symbol {
+  display: flex;
+  width: 30px;
+  height: 30px;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  background-color: var(--toastColor);
+  color: #fff;
+  border-radius: 50%;
+}
+.toast-message {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin: 10px;
+}
+.toast-message .status {
+  font-weight: bolder;
+  font-size: 22px;
+  color: var(--toastColor);
+}
+.toast-message .message {
+  font-size: 20px;
+}
+.toast-close {
+  position: absolute;
+  font-size: 18px;
+  top: 5px;
+  right: 5px;
+}
+.toast-progresbar {
+  width: 100%;
+  height: 5px;
+  background-color: var(--toastColor);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  transition-property: width;
+  transition-duration: var(--toastDur);
+  transition-timing-function: linear;
+}
+.toast-progresbar.active {
+  width: 0;
+}
